# serverless-examples

./: .gitignore
cleaner/aws/src/main/java/csana/cleaner/aws/: Aws.java
cleaner/base/: pom.xml
cleaner/fission/: pom.xml
functions/cleaner/aws/: pom.xml
functions/cleaner/openfaas/: cleaner.py  docker_build.sh
functions/incrementer/base/: pom.xml
functions/incrementer/fission/: pom.xml
functions/viewer/aws/: pom.xml
functions/viewer/base/: pom.xml
functions/viewer/fission/: pom.xml
functions/viewer/openfaas/: CMakeLists.txt  conanfile.py
incrementer/aws/: pom.xml
incrementer/openfaas/: Dockerfile  pom.xml
samples/fission/: install.sh  sample.sh  spec-destroy.sh  uninstall-manually.sh
samples/fission/manifests/: 010-redis-persistentvolume.yaml  060-hello-config.yaml  install.sh  uninstall.sh
samples/fission/specs/: env-jvm.yaml  fission-deployment-config.yaml  function-cleaner.yaml  function-incrementer.yaml  function-viewer.yaml  route-cleaner.yaml  route-viewer.yaml  timetrigger-incrementer.yaml
samples/openfaas/: hello.yml  install.sh  uninstall.sh
samples/openfaas/cleaner/: Dockerfile
samples/openfaas/incrementer/: Dockerfile
samples/openfaas/manifests/: 020-redis-master-statefulset.yaml  030-redis-master-service.yaml  040-redis-slave-deployment.yaml  050-redis-slave-service.yaml  uninstall.sh
samples/openfaas/sample/: incrementer.yml  install.sh  uninstall.sh
samples/openfaas/sample/new/: new-sample.sh
samples/openfaas/viewer/: Dockerfile  viewer
viewer/openfaas/: Dockerfile
viewer/openfaas/src/: viewer.cpp
(+9 files in other folders)
